# CogniWise

./: .dockerignore  .env.docker_example  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose-prod.yaml  compose.yaml  nginx.conf  pyproject.toml
.github/workflows/: ci.yaml
course-content-example/: full_stack_js.markdown  ml_python_intro.markdown  ml_python_part2.markdown  ml_python_part2_subblock.markdown  python_basics.markdown  python_basics_part2.markdown  python_basics_part2_subblock.markdown
nginx/: nginx-prod.conf  nginx.conf
prod-example/: .env.prod  compose-prod.yaml
src/: conftest.py  pytest.ini
src/app/: forms.py  settings.py  urls.py
src/app/tests/: api_clients.py  test_clients.py  test_minio.py  test_s3.py
src/main/: admin.py  context_processors.py  decorators.py  forms.py  models.py  urls.py  views.py
src/main/migrations/: 0001_initial.py  0002_course_updated_at_courseprofile.py  0003_alter_course_options_alter_courseprofile_options_and_more.py  0004_alter_course_options_alter_course_description_and_more.py  0005_alter_course_description.py  0006_alter_subblock_order_alter_block_unique_together_and_more.py  0007_alter_block_options_alter_subblock_options.py
src/main/services/: __init__.py  fetching.py  mailing.py
src/main/templatetags/: format_text.py
src/main/tests/: test_views.py
src/orders/: admin.py  models.py  services.py  urls.py  views.py
src/orders/migrations/: 0001_initial.py  (+1 more)
src/templates/: base.html  form_field.html
src/users/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
(+57 files in other folders)
